# template-python

./: .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  template.manifest.yaml
.github/workflows/: ci.yml
apps/app_name/app/: main.py
apps/worker/app/: main.py
docs/: dev.md  testing.md
docs/analysis/: product_context.md
docs/architecture/: api.md  data.md  overview.md  worker.md
docs/backlog/: README.md
docs/decisions/: ADR-001-postgres.md  ADR-002-python-tooling.md  ADR-003-worker-boundaries.md
infra/docker/: docker-compose.yml
infra/migrations/: alembic.ini  env.py
scripts/: bootstrap.sh
tests/smoke/: test_health.py
