[project]
name = "standard-python-agent-template"
version = "0.1.0"
description = "Reusable Python 3.12 API and worker repository template."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pre-commit>=4.0.0,<5.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "ruff>=0.9.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/README.md",
  "/apps",
  "/docs",
  "/infra",
  "/packages",
  "/pyproject.toml",
  "/scripts",
  "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
  "/apps/**/*.py",
  "/packages/**/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "C4",
  "SIM",
  "RUF",
]
[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
exclude = [
  "^infra/migrations/versions/",
]

[[tool.mypy.overrides]]
module = [
  "alembic.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=apps --cov=packages --cov-report=term-missing"
testpaths = [
  "tests",
  "apps/api/tests",
  "apps/worker/tests",
]
pythonpath = ["."]
markers = [
  "integration: marks tests that require infrastructure or external boundaries",
  "smoke: marks lightweight startup and end-to-end sanity checks",
]

[tool.coverage.run]
branch = true
source = [
  "apps",
  "packages",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
